Styles/ExhibitSection.css
.exhibit
{
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: center;
    height: 100vh;
}

.flex-item
{
    width: 100%;
    padding: 20px;
    box-sizing: border-box;
}

#carousel-container
{
    display: flex;
    justify-content: center;
    align-items: center;
    overflow: hidden;
    height: 90%;
}

.slide-content
{
    display: flex;
    flex-direction: column;
    height: 100%;
    width: 100%;
}

.slide-image
{
}
.slide-image img
{
    width: 100%;
    height: 100%;
    object-fit: contain;
}

.slide-text
{
    padding: 10px;
    color: #cfcfcf;
    overflow-y: auto;
}
.slide-text p
{
    margin: 0px;
}

.link-to-catalog
{
    width: 100%;
    display: flex;
    justify-content: center;
    color: #8d8d8d;
    text-decoration: none;
    margin-top: 10px;
}
.link-to-catalog:hover
{
    color: #b0b0b0;
    text-decoration: underline;
}

.slide-links
{
    position: absolute;
    bottom: 0;
    width: auto;
}
.slide-links a
{
    width: 100%;
    display: block;
    color: #8d8d8d;
    text-decoration: none;
    margin-top: 10px;
    text-align: center;
}
.slide-links a:hover
{
    color: #b0b0b0;
    text-decoration: underline;
}

.link-to-webgl-game
{
    display: block;
}

@media(max-width: 768px)
{
    .link-to-webgl-game
    {
        display: none;
    }
}

@media(min-width: 961px)
{
    .slide-content
    {
        flex-direction: row;
    }

    .slide-image
    {
        width: 60%;
        padding-right: 20px;
    }

    .slide-text
    {
        width: 40%;
        padding-left: 20px;
        border-left: 2px solid transparent;
        border-image: linear-gradient(to bottom, transparent, white, transparent);
        border-image-slice: 1;
    }
}

@media(max-width: 960px)
{
    .slide-image
    {
        height: 60%;
        padding-bottom: 20px;
    }

    .slide-text
    {
        height: 40%;
        text-align: left;
        padding-top: 20px;
        border-top: 2px solid transparent;
        border-image: linear-gradient(to right, transparent 3%, white 50%, transparent 97%);
        border-image-slice: 1;
    }
}

